@@ -127,41 +127,51 @@ BEGIN
     LTEXT           "Static",IDC_MESSAGE,7,7,262,8
 END
 
-IDD_MEMLISTS DIALOGEX 0, 0, 139, 186
+IDD_MEMLISTS DIALOGEX 0, 0, 228, 186
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOPMOST
 CAPTION "Memory Lists"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Close",IDOK,82,165,50,14
+    DEFPUSHBUTTON   "Close",IDOK,171,165,50,14
     LTEXT           "Zeroed",IDC_STATIC,7,7,24,8
-    LTEXT           "Free",IDC_STATIC,7,18,16,8
-    LTEXT           "Modified",IDC_STATIC,7,29,28,8
-    LTEXT           "Modified no-write",IDC_STATIC,7,40,56,8
-    LTEXT           "Bad",IDC_STATIC,7,51,13,8
+    LTEXT           "Free",IDC_STATIC,7,17,16,8
+    LTEXT           "Modified",IDC_STATIC,7,28,28,8
+    LTEXT           "Modified no-write",IDC_STATIC,7,39,56,8
+    LTEXT           "Bad",IDC_STATIC,7,50,13,8
     LTEXT           "Standby",IDC_STATIC,7,62,28,8
-    LTEXT           "Priority 0",IDC_STATIC,23,74,30,8
-    LTEXT           "Priority 1",IDC_STATIC,23,85,30,8
-    LTEXT           "Priority 2",IDC_STATIC,23,96,30,8
-    LTEXT           "Priority 3",IDC_STATIC,23,107,30,8
+    LTEXT           "Priority 0",IDC_STATIC,23,73,30,8
+    LTEXT           "Priority 1",IDC_STATIC,23,84,30,8
+    LTEXT           "Priority 2",IDC_STATIC,23,95,30,8
+    LTEXT           "Priority 3",IDC_STATIC,23,106,30,8
     LTEXT           "Priority 4",IDC_STATIC,23,118,30,8
     LTEXT           "Priority 5",IDC_STATIC,23,129,30,8
     LTEXT           "Priority 6",IDC_STATIC,23,140,30,8
     LTEXT           "Priority 7",IDC_STATIC,23,151,30,8
     RTEXT           "Static",IDC_ZZEROED_V,73,7,59,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZFREE_V,73,18,59,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZMODIFIED_V,73,29,59,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZMODIFIEDNOWRITE_V,73,40,59,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZBAD_V,73,51,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZFREE_V,73,17,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZMODIFIED_V,73,28,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZMODIFIEDNOWRITE_V,73,39,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZBAD_V,73,50,59,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZSTANDBY_V,73,62,59,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZSTANDBY0_V,73,74,59,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZSTANDBY1_V,73,85,59,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZSTANDBY2_V,73,96,59,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZSTANDBY3_V,73,107,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZSTANDBY0_V,73,73,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZSTANDBY1_V,73,84,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZSTANDBY2_V,73,95,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZSTANDBY3_V,73,106,59,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZSTANDBY4_V,73,118,59,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZSTANDBY5_V,73,129,59,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZSTANDBY6_V,73,140,59,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZSTANDBY7_V,73,151,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZREPURPOSED_V,162,62,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZREPURPOSED0_V,162,74,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZREPURPOSED1_V,162,85,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZREPURPOSED2_V,162,96,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZREPURPOSED3_V,162,107,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZREPURPOSED4_V,162,118,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZREPURPOSED5_V,162,129,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZREPURPOSED6_V,162,140,59,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZREPURPOSED7_V,162,151,59,8,SS_ENDELLIPSIS
+    RTEXT           "(Repurposed)",IDC_STATIC,162,50,59,8
 END
 
 IDD_PROCDISKNET DIALOGEX 0, 0, 260, 260
@@ -301,7 +311,7 @@ BEGIN
     IDD_MEMLISTS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 132
+        RIGHTMARGIN, 221
         TOPMARGIN, 7
         BOTTOMMARGIN, 179
     END
